--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div class="container-md">
       <nav class="navbar navbar-expand-lg navbar-light" id="ulhead">
-      <a class="navbar-brand" href="F:\First project html\Website html\index.html">abris <i class="fas fa-palette"></i></i></a>
+      <a class="navbar-brand" href="https://nazulla.github.io/Website/">abris <i class="fas fa-palette"></i></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
