--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" id="lihead">
-            <a class="nav-link" href="F:\First project html\Website html\contactus.html">Contact</a>
+            <a class="nav-link" href="docs\contactus.html">Contact</a>
           </li>
           <li class="nav-item" id="lihead">
             <a class="nav-link" href="F:\First project html\Website html\aboutus.html">About</a>
